Add initial implementation of streams